# mcp-imap

./: .env.example  .gitignore  README.md  pyproject.toml
src/: cli.py  mcp_imap.py
src/utils/: __init__.py
tests/: test_cli.py  test_mcp_imap.py
